--- a/wishlist.html
+++ b/wishlist.html
@@ -1,18 +1,16 @@
-<!-- wishlist.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Surprise Wishlist</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Your Surprise Wishlist</h1>
-    <div id="wishlistInfo"></div>
-    <h2>Suggested Gifts</h2>
-    <div id="suggestions"></div>
-  </div>
-  <script src="assets/js/wishlist.js"></script>
+  <h1>Someone has a surprise wish! 🎁</h1>
+  <div id="wishlistInfo"></div>
+  <div id="suggestions"></div>
+
+  <script src="wishlist.js"></script>
 </body>
 </html>
