--- a/wishlist.html
+++ b/wishlist.html
@@ -11,6 +11,6 @@
   <div id="wishlistInfo"></div>
   <div id="suggestions"></div>
 
-  <script src="wishlist.js"></script>
+  <script src="assets/js/wishlist.js"></script>
 </body>
 </html>
