modified:   assets/js/wishlist.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <label>Budget</label>
       <select name="budget">
-        <option value="under500">Under ₹500</option>
+        <option value="under500">0 - ₹500</option>
         <option value="500to2000">₹500 - ₹2000</option>
         <option value="above2000">₹2000- ₹3500</option>
         <option value="above3500">Above ₹3500</option>
