--- a/wishlist.html
+++ b/wishlist.html
@@ -10,6 +10,8 @@
   <h1>Someone has a surprise wish! 🎁</h1>
   <div id="wishlistInfo"></div>
   <div id="suggestions"></div>
+  <div id="shoppingLinks" class="shop-links-container"></div>
+
 
   <script src="assets/js/wishlist.js"></script>
 </body>
