--- a/wishlist.html
+++ b/wishlist.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Surprise Wishlist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
   <h1>Someone has a surprise wish! 🎁</h1>
