--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <canvas id="particle-canvas"></canvas>
   <div class="form-container">
     <h1>💌 Create Your Surprise Wishlist</h1>
     <p class="subtitle">Choose what you want without spoiling the surprise!</p>
@@ -48,6 +49,8 @@
     </form>
   </div>
 
-  <script src="assets/js/form.js"></script>
+  <script src="assets/js/forms.js"></script>
+  <!-- <script src="assets/js/particles.js"></script> -->
+
 </body>
 </html>
