--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <textarea name="note" rows="3" placeholder="Add any special note (optional)"></textarea>
 
       <button type="submit">🎁 Generate Surprise Link</button>
+      <div id="linkOutput" class="output-container"></div>
+        <p class="disclaimer">*Your wishlist will be private and only shared with the person you choose.</p>
+        
 
       <div id="result" class="result-section">
         <p id="shortLink"></p>
