--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <canvas id="particle-canvas"></canvas>
+    <div class="overlay"></div>
   <div class="form-container">
     <h1>💌 Create Your Surprise Wishlist</h1>
     <p class="subtitle">Choose what you want without spoiling the surprise!</p>
@@ -43,7 +43,7 @@
       <button type="submit">🎁 Generate Surprise Link</button>
       <div id="linkOutput" class="output-container"></div>
         <p class="disclaimer">*Your wishlist will be private and only shared with the person you choose.</p>
-        
+
 
       <div id="result" class="result-section">
         <p id="shortLink"></p>
