--- a/wishlist.html
+++ b/wishlist.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
-<body>
+<body class="wishlist-page">
   <h1>Someone has a surprise wish! 🎁</h1>
   <div id="wishlistInfo"></div>
   <div id="suggestions"></div>
