--- a/wishlist.html
+++ b/wishlist.html
@@ -9,7 +9,7 @@
 <body class="wishlist-page">
   <h1>Someone has a surprise wish! 🎁</h1>
   <div id="wishlistInfo"></div>
-  <div id="suggestions"></div>
+  <div id="suggestions" class="fade-in"></div>
   <div id="shoppingLinks" class="shop-links-container"></div>
 
 
