--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <label for="budget">Budget</label>
       <select id="budget" name="budget" required>
         <option value="">Choose</option>
-        <option value="under500">Under ₹500</option>
-        <option value="under1000">Under ₹1000</option>
-        <option value="under2000">Under ₹2000</option>
-        <option value="under5000">Under ₹5000</option>
-        <option value="above5000">Above ₹5000</option>
+        <option value="under500">0 - ₹500</option>
+        <option value="under1000">₹500 - ₹1000</option>
+        <option value="under2000">₹1000 - ₹2000</option>
+        <option value="under5000">₹2000 ₹3000</option>
+        <option value="above5000">Above ₹3000</option>
         <option value="custom">Custom Amount</option>
         <option value="noLimit">No Limit</option>
       </select>
