--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <option value="under500">0 - ₹500</option>
         <option value="under1000">₹500 - ₹1000</option>
         <option value="under2000">₹1000 - ₹2000</option>
-        <option value="under5000">₹2000 ₹3000</option>
+        <option value="under5000">₹2000 - ₹3000</option>
         <option value="above5000">Above ₹3000</option>
         <option value="custom">Custom Amount</option>
         <option value="noLimit">No Limit</option>
