Update index.html with new changes

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
       <input type="text" name="hint" placeholder="Give a hint..." required>
 
       <label for="budget">Budget</label>
-      <select id="budget" name="budget" required>
+<select id="budget" name="budget" required>
         <option value="">Choose</option>
-        <option value="under 500">0 - ₹500</option>
-        <option value="under 1000">₹500 - ₹1000</option>
-        <option value="under 2000">₹1000 - ₹2000</option>
-        <option value="under 3000">₹2000 - ₹3000</option>
-        <option value="above 3000">Above ₹3000</option>
+        <option value="0 - ₹500">0 - ₹500</option>
+        <option value="₹500 - ₹1000">₹500 - ₹1000</option>
+        <option value="₹1000 - ₹2000">₹1000 - ₹2000</option>
+        <option value="₹2000 - ₹3000">₹2000 - ₹3000</option>
+        <option value="Above ₹3000">Above ₹3000</option>
         <option value="custom">Custom Amount</option>
-        <option value="noLimit">No Limit</option>
+        <option value="No Limit">No Limit</option>
       </select>
       <input type="number" id="customAmount" name="customAmount" placeholder="Enter custom amount" style="display: none; margin-top: 10px;" />
 
