Update index.html with new changes

--- a/wishlist.html
+++ b/wishlist.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body class="wishlist-page">
+  <div class="wishlist-wrapper">
     <h1>Someone has a surprise wish! 🎁</h1>
     <div id="wishlistInfo"></div>
     <div id="suggestions"></div>
     <div id="suggestions" class="fade-in"></div>
     <div id="shoppingLinks" class="shop-links-container"></div>
+    </div>
 
 
 
