--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <label>Optional Note</label>
       <textarea name="note" rows="3" placeholder="Add any special note (optional)"></textarea>
 
-      <button type="submit">🎁 Generate Surprise Link</button>
+      <button type="submit"> Generate Surprise Link</button>
       <div id="linkOutput" class="output-container"></div>
         <p class="disclaimer">*Your wishlist will be private and only shared with the person you choose.</p>
 
